fixed uneven padding on nav

--- a/src/sass/partials/_contact-details.scss
+++ b/src/sass/partials/_contact-details.scss
@@ -14,6 +14,6 @@
   }
 
   @media (min-width: $menu-break-width) {
-    margin-top: 6.5rem;
+    margin-top: 7.5rem;
   }
 }
